<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_github"
        android:layout_width="42dp"
        android:layout_height="42dp"
        tools:src="@drawable/user8"
        app:civ_border_color="@color/colorAccent"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:layout_toStartOf="@+id/img_user_github"
        android:layout_marginEnd="27dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_story_user_github"
            style="@style/font_roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:lines="2"
            android:textColor="@android:color/black"
            tools:text="@string/story_github_user"/>
        <TextView
            android:id="@+id/tv_name_user_github"
            style="@style/font_roboto_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/name_user_github"
            android:textSize="28sp"
            android:textAlignment="textEnd"
            android:layout_marginVertical="5dp" />
        <TextView
            android:id="@+id/tv_location_github_user"
            style="@style/font_roboto_reguler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/location_user_github"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>



</RelativeLayout>