<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserGithubActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:src="@drawable/ic_sitebg"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:id="@+id/ly_list_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_github"
            android:layout_width="82dp"
            android:layout_height="82dp"
            tools:src="@drawable/user1"
            android:layout_marginEnd="35dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_repository_user_github"
                style="@style/font_roboto_bold"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                tools:text="102"
                android:textAlignment="center"
                android:textColor="#CB000000"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tv_repository"
                style="@style/font_roboto_reguler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:layout_below="@+id/tv_repository_user_github"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_followers_user_github"
                style="@style/font_roboto_bold"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                tools:text="56995"
                android:textAlignment="center"
                android:layout_marginHorizontal="20dp"
                android:textColor="#CC000000"
                android:layout_toEndOf="@+id/tv_repository_user_github"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tv_followers"
                style="@style/font_roboto_reguler"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_below="@+id/tv_repository_user_github"
                android:textSize="15sp"
                android:layout_toEndOf="@id/tv_repository"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_following_user_github"
                style="@style/font_roboto_bold"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                tools:text="12"
                android:textAlignment="center"
                android:textColor="#CC000000"
                android:layout_toEndOf="@+id/tv_followers_user_github"
                android:textSize="19sp"/>
            <TextView
                style="@style/font_roboto_reguler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_below="@+id/tv_repository_user_github"
                android:textSize="15sp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/tv_followers"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_below="@+id/tv_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:layout_weight="1"
                    android:layout_marginEnd="3dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_weight="2"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ly_list_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            style="@style/font_roboto_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="17sp"
            android:textColor="#B3000000"/>
        <TextView
            android:id="@+id/tv_name_user_github"
            style="@style/font_roboto_reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="my name Jake Wharton."
            android:layout_marginTop="7dp"
            android:textSize="13sp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/tv_location_user_github"
            style="@style/font_roboto_reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="location Pittsburgh, PA, USA "
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/tv_company_user_github"
            style="@style/font_roboto_reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="I work at company Google, Inc."
            android:layout_marginStart="20dp"/>
        <TextView
            style="@style/font_roboto_reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:layout_marginTop="7dp"
            android:textSize="17sp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/tv_story_user_github"
            style="@style/font_roboto_reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="lorem Ipsum has been the industry's standard
dummy text ever since the when an unknown printer took a galley of type."
            android:layout_marginStart="20dp"/>
    </LinearLayout>


</RelativeLayout>